添加应用程序图标和 Inno Setup 安装脚本
- 设置 WPF 应用程序图标 (logo.ico)
- 添加应用程序图标到项目文件
- 创建 Inno Setup 安装脚本 (MarkdownTool-Setup.iss)
- 更新 .gitignore 忽略安装程序输出目录
- 支持中英文安装向导
- 自动文件关联 (.md, .markdown)
- 右键菜单集成

--- a/MarkdownTool/MainWindow.xaml
+++ b/MarkdownTool/MainWindow.xaml
@@ -12,7 +12,8 @@
         Width="1400"
         WindowStartupLocation="CenterScreen"
         ExtendsContentIntoTitleBar="True"
-        Background="White">
+        Background="White"
+        Icon="logo/logo.ico">
     <ui:FluentWindow.Resources>
         <local:BoolToIconConverter x:Key="BoolToIconConverter"/>
         
